# rust-v-go-tcc

./: .gitignore  CONTEXT.MD  LIMITACOES_COM_MULTIPLAS_RODADAS.md  LIMITACOES_E_JUSTIFICATIVAS.md  METODOLOGIA_CIENTIFICA.md  MUDANCA_POOL_CONEXOES.md  Makefile  PROTOCOLO_MULTIPLAS_RODADAS.md  QUICKSTART.md  README.md  RESUMO_MULTIPLAS_RODADAS.md  analyze_results.py  benchmark.sh  benchmark_replicated.sh  collect_environment.sh  docker-compose.yml  init.sql  latencia_media_go_vs_rust.html  percentiles.lua
benchmark_results/20260423_100804/go_c10/: metrics_before.json
benchmark_results/20260423_101734/go_c10/: metrics_before.json
benchmark_results_replicated/20260423_101844/: analysis_replicated.json
benchmark_results_replicated/20260423_101844/analysis/rep10/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep11/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep12/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep13/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep14/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep15/run/: summary.txt
benchmark_results_replicated/20260423_101844/analysis/rep16/run/: summary.txt
evidencias/: fase1_go_alloc_growth.txt  fase1_go_escape_analysis.txt  fase1_rust_objdump.txt  fase1_rust_rss_heavy_load.txt  fase1_rust_rss_normal_load.txt  fase3_go_mock_vs_real.txt  fase3_rust_mock_vs_real.txt
go-api/: Dockerfile  go.mod  main.go
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
(+3623 files in other folders)
