[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

deadpool-postgres = "0.9"
tokio-postgres = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
